# learnopengl

./: CMakeLists.txt
include/glad/: glad.c  glad.h
lib/: glfw3.lib
src/: main.cpp  shader.h
src/shaders/: shader.fs  shader.vs
